# anigelo-web

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  index.scss
src/: anime_list.rs  main.rs
src/components/: anime_card.rs  mod.rs
src/pages/: anime_list.rs  episode_list.rs  mod.rs  player.rs  season_list.rs
